# semantic-manager

./: LICENSE  README.md  pyproject.toml
examples/: annotate_dataframe.py  annotate_json.py  browse_namespaces.py
semantic_manager/: __init__.py  _auth.py  _client.py  _exceptions.py  _models.py
