[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-manager"
version = "0.1.0"
description = "Python SDK for the Semantic Manager vocabulary and annotation service"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ontology", "vocabulary", "semantic", "annotation", "rdf", "linked-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
    "responses>=0.23",
]
pandas = [
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/your-org/semantic-manager"
Documentation = "https://github.com/your-org/semantic-manager#readme"
Issues = "https://github.com/your-org/semantic-manager/issues"

[tool.hatch.build.targets.wheel]
packages = ["semantic_manager"]